TAG: qcreports_db-5-1-9-no tag
DATE: 10/27/2014
STAFF: lec
CHANGES:
a) mgd/GXD_SpecTheilerAge.py
quick fix for Connie/did not tag/this will get installed
when the next tag is installed

TAG: qcreports_db-5-1-9-6
DATE: 10/27/2014
STAFF: lec
CHANGES:
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:141210 to excluded list

TAG: qcreports_db-5-1-9-5
DATE: 10/27/2014
STAFF: lec, ks
CHANGES: TR11750/infrastructure/postgres/complient
1) see TR11750 in individual reports

TAG: qcreports_db-5-1-9-4
DATE: 10/24/2014
STAFF: sc
CHANGES: TR11674 - HDP-2 projects; expressed component epic
1)new: weekly/ALL_ExpressedComp.sql
2) added above to alleles section of qcr.html

TAG: qcreports_db-5-1-9-3
DATE: 10/15/2014
STAFF: lec
CHANGES: 
1) mgd/RECOMB_Images.py : fix

TAG: qcreports_db-5-1-9-2
DATE: 10/1/2014
STAFF: dbm
CHANGES: TR11652
1) weekly/MGI_EGNomenUpdate.sql - New
2) qcr.html - Added link to MGI_EGNomenUpdate.sql.rpt in nomen section

TAG: qcreports_db-5-1-9-1
DATE: 09/29/2014
STAFF: lec
CHANGES:
a) TR11652/converting HMD tables to MRK_Cluster
b) MRK_NomenRat.sql should have been archived earlier (qcreports_db-4-4-0-19)
c) MRK_NomenNotInformative.sql : per Monica : can archive : not used
c) removing PRB_Allele_Strain calls (see TR11789)

TAG: qcreports_db-5-1-8-14
TAG: qcreports_db-5-1-8-13
DATE: 08/05/2014
STAFF: lec
CHANGES:
a) TR11745/mgd/GO_stats.py/add 'GO Central' to the GO_CLAUSE
b) TR11708/weekly/GXD_EMAPA_Terms.py : remove secondary ids 

TAG: qcreports_db-5-1-8-12
DATE: 07/17/2014
STAFF: lec
CHANGES:
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:204812 to excluded list
b) TR11708/weekly/GXD_EMAPS_Terms.py : remove secondary ids 

TAG: qcreports_db-5-1-8-11
DATE: 06/18/2014
STAFF: lnh
CHANGES: TR 11687/ALL_Progress.py
added date to report file name

TAG: qcreports_db-5-1-8-10
DATE: 05/15/2014
STAFF: lec
CHANGES: 
mgd/PRB_StrainByDate.sql: fix bug

TAG: qcreports_db-5-1-8-9
DATE: 04/30/2014
STAFF: lec
CHANGES: 
a) TR11667/monthly/ALL_RefCounts.py
